# robust-radar-tracking

./: .gitignore  LICENSE  README.md  diag_out.txt  output.txt  pyproject.toml
cpp/: Makefile  README.md  kalman  kalman.cpp  kalman.h  main.cpp  matrix.cpp  matrix.h
docs/: ARCHITECTURE.md  CHANGELOG.md  CONVENTIONS.md  PROJECT.md  ROADMAP.md
examples/: animation_demo.py  ecm_scenario.py  ekf_comparison.py  maneuver.py  multi_target.py  parameter_sweep.py  scenario_comparison.py  single_target.py
radarsim/: __init__.py
radarsim/analysis/: __init__.py  metrics.py  parameter_sweep.py
radarsim/sim/: __init__.py  ecm.py  radar.py  target.py
radarsim/tracker/: __init__.py  ekf.py  kf.py  multi_target.py
radarsim/viz/: __init__.py  animation.py  plots.py
tests/: test_ecm.py  test_ekf.py  test_kf.py  test_multi_target.py  test_target.py
