[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "radarsim"
version = "0.1.0"
description = "2D radar target tracking with Kalman filtering"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "matplotlib",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
include = ["radarsim*"]
